Fixed navbar image spacing.

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ a {
     text-decoration: none;
     font-family: "Contrail One", sans-serif;
     padding: 10px 20px;
-    margin: 20px;
+    margin: 16.5px;
 }
 
 .navBarLinks a:hover {
